--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- 左邊白色框 -->
         <div class="card">
             <h2>3D 模型資訊</h2>
-            <p>這是我的 3D 模型展示區，你可以在右側查看模型。</p>
+            <p>這是我的 3D 模型展示區，你可以在下方查看模型。</p>
             <p class="link">👉 <a href="https://sketchfab.com/models/4a884a3da461411f9e72a1e8fa9441f9" target="_blank">在 Sketchfab 上查看完整 3D 模型</a></p>
         </div>
 
